# ov-llama

./: CMakePresets.json  setup.sh
docs/: build.md
examples/simple/: simple.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-openvino.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-openvino.cpp
ggml/src/ggml-openvino/: .clang-format  CMakeLists.txt  README.md  decoder.h  ggml-decoder.cpp  ggml-decoder.h  ggml-graph-iterator.cpp  ggml-graph-iterator.h  ggml-openvino.cpp  ggml-ov-frontend-utils.cpp  graph_iterator.h  utils.cpp  utils.h
ggml/src/ggml-openvino/openvino/: decoder.hpp  frontend.cpp  frontend.hpp  node_context.hpp  op_table.cpp  op_table.hpp  translate_session.cpp  translate_session.hpp  utils.cpp  utils.hpp
ggml/src/ggml-openvino/openvino/op/: add.cpp  cont.cpp  cpy.cpp  get_rows.cpp  glu_swiglu.cpp  mul.cpp  mulmat.cpp  permute.cpp  reshape.cpp  rms_norm.cpp  rope.cpp  scale.cpp  soft_max.cpp  transpose.cpp  unary.cpp  unary_silu.cpp  view.cpp
src/: llama-graph.cpp
